5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_1017.log
== TEST (2019-04-02 09:54:31) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = r* acos(sin(ti)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = r* acos(sin(ti)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:54:55) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(ti)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    distancia = raio* acos(sin(ti)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'ti' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:55:20) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:55:30) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- EXECUTION TIME:
0.143468
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:06) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:00:16) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:00:22) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:00:45) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:01:08) 
-- CODE:
from math import*
t1 = radians(float(input("Latitude de p1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de t2: ")))
g2 = radians(float(input("Latitude de g2: ")))
raio = 6371.01
distancia = raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
